--- a/习题库/第一章 入门基本姿势.md
+++ b/习题库/第一章 入门基本姿势.md
@@ -1,6 +1,8 @@
 # 第一组：
 2017140126 席章坤  
 （判断题）呼吸的节奏应该是呼气—闭气—吸气，周而复始，如此循环。【错误】  
+2017140124吴迪
+（判断题）蛙泳的口诀是收，翻，蹬夹。【正确】
 # 第二组：
 2017140201程月梅  
 （多选）题目:入门基本姿势包括哪些项目？  
